fix title spacing

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -173,8 +173,20 @@ footer {
 }
 
 @media (max-width: 470px) {
-  .hero h1 {
-    font-size: 50px !important;
+
+  .hero {
+    .title {
+      margin-top: 0 !important;
+    }
+
+    h1 {
+      font-size: 50px !important;
+    }
+
+    .subtitle {
+      height: 30vh;
+      text-overflow: ellipsis;
+    }
   }
 
   .story .buy {
